--- a/index2.html
+++ b/index2.html
@@ -105,7 +105,7 @@
 							</div>
 							<h2>AURORA</h2>
 							<!-- button class="content-switch feathericon-arrow-down">Read more</button -->
-							<button class="content-switch icon-arrow-right"><i class="fa fa-caret-up">Read more</i></button>
+							<i class="fa fa-caret-right"></i>
 						</div>
 
 						<!-- SECTION HEADER 02 -->
@@ -115,7 +115,7 @@
 							<!-- img class="aurora-skeleton-viz-img-2" src="http://biomath.math.nd.edu/compbio/PhoneNetwork/continental0p001.gif" / -->
 							</div>
 							<h2 class="slogan-quote">Making Data Enchanting</h2>
-							<button class="content-switch">Read more</button>
+							<i class="content-switch fa fa-caret-down">Read more</i>
 						</div>
 
 						<!-- SECTION HEADER 03 -->
@@ -123,7 +123,7 @@
 							<div class="img-wrap">
 							<img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S03&w=1280&h=850&fm=png" alt="img3"/></div>
 							<h2>About<span>Project Aurora</span></h2>
-							<button class="content-switch">Read more</button>
+							<i class="content-switch fa fa-caret-down"></i>
 						</div>
 
 						<!-- SECTION HEADER 04 -->
