--- a/index2.html
+++ b/index2.html
@@ -115,7 +115,7 @@
 							<!-- img class="aurora-skeleton-viz-img-2" src="http://biomath.math.nd.edu/compbio/PhoneNetwork/continental0p001.gif" / -->
 							</div>
 							<h2 class="slogan-quote">Making Data Enchanting</h2>
-							<i class="content-switch fa fa-caret-down">Read more</i>
+							<button><i class="content-switch fa fa-caret-down">Read more</i></button>
 						</div>
 
 						<!-- SECTION HEADER 03 -->
@@ -123,7 +123,7 @@
 							<div class="img-wrap">
 							<img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S03&w=1280&h=850&fm=png" alt="img3"/></div>
 							<h2>About<span>Project Aurora</span></h2>
-							<i class="content-switch fa fa-caret-down"></i>
+							<button><i class="content-switch fa fa-caret-down"></i></button>
 						</div>
 
 						<!-- SECTION HEADER 04 -->
