--- a/index2.html
+++ b/index2.html
@@ -104,8 +104,8 @@
 							<img class="aurora-skeleton-viz-img-1" src="https://cloud.githubusercontent.com/assets/4642277/11176707/6bb89836-8c0d-11e5-8925-98469435e8ad.png" />
 							</div>
 							<h2>AURORA</h2>
-							<!-- button class="content-switch feathericon-arrow-down">Read more</button -->
-							<i class="fa fa-caret-right"></i>
+							<button class="content-switch feathericon-arrow-down"><i class="fa fa-caret-right"></i></button>
+							
 						</div>
 
 						<!-- SECTION HEADER 02 -->
