--- a/index2.html
+++ b/index2.html
@@ -104,7 +104,7 @@
 							<img class="aurora-skeleton-viz-img-1" src="https://cloud.githubusercontent.com/assets/4642277/11176707/6bb89836-8c0d-11e5-8925-98469435e8ad.png" />
 							</div>
 							<h2>AURORA</h2>
-							<button class="content-switch feathericon-arrow-down"><i class="fa fa-caret-right"></i></button>
+							<button class="content-switch"><i class="fa fa-caret-right"></i></button>
 							
 						</div>
 
@@ -115,7 +115,7 @@
 							<!-- img class="aurora-skeleton-viz-img-2" src="http://biomath.math.nd.edu/compbio/PhoneNetwork/continental0p001.gif" / -->
 							</div>
 							<h2 class="slogan-quote">Making Data Enchanting</h2>
-							<button><i class="content-switch fa fa-caret-down">Read more</i></button>
+							<button class="content-switch"><i class="fa fa-caret-down">Read more</i></button>
 						</div>
 
 						<!-- SECTION HEADER 03 -->
