sh4 button icon

--- a/index2.html
+++ b/index2.html
@@ -132,7 +132,7 @@
 							<img class="aurora-skeleton-viz-img-inside-02c" src="https://cloud.githubusercontent.com/assets/4642277/11177516/14ec1c92-8c14-11e5-9d6a-a8a312fef9cb.jpeg" alt="img4"/ >
 							</div>
 							<h2>Concept<span>Magic of the UX</span></h2>
-							<button class="content-switch">Read more</button>
+							<button class="content-switch"><img src="https://maxcdn.icons8.com/windows10/PNG/32/Arrows/chevron_down-32.png" />Read more</button>
 						</div>
 
 						<!-- SECTION HEADER 05 -->
