--- a/index2.html
+++ b/index2.html
@@ -104,7 +104,7 @@
 							</div>
 							<h2>AURORA</h2>
 							<!-- button class="content-switch feathericon-arrow-down">Read more</button -->
-							<button class="content-switch icon-arrow-right">Read more</button>
+							<button class="content-switch"><img src="https://maxcdn.icons8.com/windows10/PNG/32/Arrows/chevron_down-32.png" /></button>
 						</div>
 
 						<!-- SECTION HEADER 02 -->
