--- a/index2.html
+++ b/index2.html
@@ -104,17 +104,17 @@
 							</div>
 							<h2>AURORA</h2>
 							<!-- button class="content-switch feathericon-arrow-down">Read more</button -->
-							<button class="content-switch"><img src="https://maxcdn.icons8.com/windows10/PNG/32/Arrows/chevron_down-32.png" /></button>
+							<a href="#SH2"><img class="SH1 arrow" src="https://maxcdn.icons8.com/windows10/PNG/32/Arrows/chevron_right-32.png" /></a>
 						</div>
 
 						<!-- SECTION HEADER 02 -->
-						<div class="slide SH2" data-content="content-2">
+						<div class="slide SH2" id="SH2" data-content="content-2">
 							<div class="img-wrap">
 							<img class="aurora-skeleton-viz-img-2" src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S02&w=1280&h=850&fm=png" alt="img2"/ >
 							<!-- img class="aurora-skeleton-viz-img-2" src="http://biomath.math.nd.edu/compbio/PhoneNetwork/continental0p001.gif" / -->
 							</div>
 							<h2 class="slogan-quote">Making Data Enchanting</h2>
-							<button class="content-switch">Read more</button>
+							<button class="content-switch"></button>
 						</div>
 
 						<!-- SECTION HEADER 03 -->
@@ -122,7 +122,7 @@
 							<div class="img-wrap">
 							<img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S03&w=1280&h=850&fm=png" alt="img3"/></div>
 							<h2>About<span>Project Aurora</span></h2>
-							<button class="content-switch">Read more</button>
+							<button class="content-switch"></button>
 						</div>
 
 						<!-- SECTION HEADER 04 -->
@@ -132,35 +132,35 @@
 							<img class="aurora-skeleton-viz-img-inside-02c" src="https://cloud.githubusercontent.com/assets/4642277/11177516/14ec1c92-8c14-11e5-9d6a-a8a312fef9cb.jpeg" alt="img4"/ >
 							</div>
 							<h2>Concept<span>Magic of the UX</span></h2>
-							<button class="content-switch"><img src="https://maxcdn.icons8.com/windows10/PNG/32/Arrows/chevron_down-32.png" />Read more</button>
+							<button class="content-switch"></button>
 						</div>
 
 						<!-- SECTION HEADER 05 -->
 						<div class="slide SH5" data-content="content-5">
 							<div class="img-wrap"><img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S05&w=1280&h=850&fm=png" alt="img5"/></div>
 							<h2>Super Tech<span>Technical Specs</span></h2>
-							<button class="content-switch">Read more</button>
+							<button class="content-switch"></button>
 						</div>
 
 						<!-- SECTION HEADER 06 -->
 						<div class="slide SH6" data-content="content-6">
 							<div class="img-wrap"><img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S06&w=1280&h=850&fm=png" alt="img6"/></div>
 							<h2>Experience<span>The Journey Walkthrough</span></h2>
-							<button class="content-switch">Read more</button>
+							<button class="content-switch"></button>
 						</div>
 
 						<!-- SECTION HEADER 07 -->
 						<div class="slide SH7" data-content="content-7">
 							<div class="img-wrap"><img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S07&w=1280&h=850&fm=png" alt="img7"/></div>
 							<h2>Partnerships + Media<span><hr /></span></h2>
-							<button class="content-switch">Read more</button>
+							<button class="content-switch"></button>
 						</div>
 
 						<!-- SECTION HEADER 08 -->
 						<div class="slide SH8" data-content="content-8">
 							<div class="img-wrap"><img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S08&w=1280&h=850&fm=png" alt="img8"/></div>
 							<h2>Be Part of the New Data Medium <span>Form</span></h2>
-							<button class="content-switch">Read more</button>
+							<button class="content-switch"></button>
 						</div>
 					</div>
 				</section>
@@ -184,10 +184,7 @@
 					<div class="content" data-content="content-2">
 						<h2>About Us <span><hr /></span></h2>
 						<p class="SC02">
-							info@wearhacks.com
-						</p>
-						<p class="related">
-							<a href="#top"><i class="fa fa-caret-up"></i></a>
+							<center>info@wearhacks.com</center>
 						</p>
 					</div>
 
@@ -196,9 +193,6 @@
 						<h2>Background<span>Information</span></h2>
 						<p class="SC03">
 						Project Aurora aims to attract, inform and provide people with security, ultimately enhancing the user's daily life. The installation will attract people’s attention through changes in light patterns and shapes. Aurora retains their attention through interactive activities, such as apps, games, etc. As more than an artistic installation, Aurora non-intrusively informs the community by displaying/broadcasting popular events, data and news. Its centric location near subways and bus stops enhances commuters’ routines through tangible features such as electric charging and WiFi stations.   Aurora is aimed at improving the safety of its surrounding area by lighting up the neighbourhood during night and providing a safe walking route.  People will feel safer walking towards Aurora and features such as map display, bus routes and nearby police station will improve the quality of the neighbourhood it is installed in.
-						</p>
-						<p class="related">
-							<a href="#top">Home</a>
 						</p>
 					</div>
 
@@ -212,9 +206,6 @@ Every design feature in this product has the intention of delivering content-ric
 
 The product has the potential to evolve into something that would resemble a personal planetarium. For example the ability to activate a series of features through pressure-sensitive floor and panel surfaces, be able to view a selfie post after viewing a projected trailer (think roller coaster selfies), and a wireless charging station from the energy collected with solar panels.  
 						</p>
-						<p class="related">
-							<a href="#top">Home</a>
-						</p>
 					</div>
 
 					<!-- SECTION CONTENT 05 -->
@@ -226,9 +217,6 @@ The product has the potential to evolve into something that would resemble a per
 						Product features + capabilities
 						Energy
 						</p>
-						<p class="related">
-							<a href="#top">Home</a>
-						</p>
 					</div>
 
 					<!-- SECTION CONTENT 06 -->
@@ -236,17 +224,13 @@ The product has the potential to evolve into something that would resemble a per
 						<h2>S06 <span>OVERVIEW TEXT</span></h2>
 						<p>One night stands out—a gorgeous night—a carnival in honour and aid of brave little Serbia. 
 						</p>
-						<p class="related">
-							<a href="#top">Home</a>
-						</p>
 					</div>
 
 					<!-- SECTION CONTENT 07 -->
 					<div class="content" data-content="content-7">
 						<h2>Partnerships + Media <span>Client + Profile Enhancing List</span></h2>
-						<p>logos. gallery page</p>
-						<p class="related">
-							<a href="#top">Home</a>
+						<p>
+							logos. gallery page
 						</p>
 					</div>
 
@@ -255,9 +239,6 @@ The product has the potential to evolve into something that would resemble a per
 						<h2>S08 <span>Call-to-action</span></h2>
 						<p>This form:
 						http://tympanus.net/codrops/2014/07/30/fullscreen-form-interface/
-						</p>
-						<p class="related">
-							<a href="#top">Home</a>
 						</p>
 					</div>
 				</section>
