--- a/index2.html
+++ b/index2.html
@@ -104,7 +104,11 @@
 							</div>
 							<h2>AURORA</h2>
 							<!-- button class="content-switch feathericon-arrow-down">Read more</button -->
-							<a href="#SH2"><img class="SH1 arrow" src="https://maxcdn.icons8.com/windows10/PNG/32/Arrows/chevron_right-32.png" /></a>
+							<button>	
+								<a href="#SH2">
+									<img class="SH1 arrow" src="https://maxcdn.icons8.com/windows10/PNG/32/Arrows/chevron_right-32.png" />
+								</a>
+							</button>
 						</div>
 
 						<!-- SECTION HEADER 02 -->
