SH# button update
<button class="content-switch" style="display=none;">

--- a/index2.html
+++ b/index2.html
@@ -118,7 +118,7 @@
 							<!-- img class="aurora-skeleton-viz-img-2" src="http://biomath.math.nd.edu/compbio/PhoneNetwork/continental0p001.gif" / -->
 							</div>
 							<h2 class="slogan-quote">Making Data Enchanting</h2>
-							<button class="content-switch"></button>
+							<button class="content-switch" style="display=none;"></button>
 						</div>
 
 						<!-- SECTION HEADER 03 -->
@@ -126,7 +126,7 @@
 							<div class="img-wrap">
 							<img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S03&w=1280&h=850&fm=png" alt="img3"/></div>
 							<h2>About<span>Project Aurora</span></h2>
-							<button class="content-switch"></button>
+							<button class="content-switch" style="display=none;"></button>
 						</div>
 
 						<!-- SECTION HEADER 04 -->
@@ -136,35 +136,35 @@
 							<img class="aurora-skeleton-viz-img-inside-02c" src="https://cloud.githubusercontent.com/assets/4642277/11177516/14ec1c92-8c14-11e5-9d6a-a8a312fef9cb.jpeg" alt="img4"/ >
 							</div>
 							<h2>Concept<span>Magic of the UX</span></h2>
-							<button class="content-switch"></button>
+							<button class="content-switch" style="display=none;"></button>
 						</div>
 
 						<!-- SECTION HEADER 05 -->
 						<div class="slide SH5" data-content="content-5">
 							<div class="img-wrap"><img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S05&w=1280&h=850&fm=png" alt="img5"/></div>
 							<h2>Super Tech<span>Technical Specs</span></h2>
-							<button class="content-switch"></button>
+							<button class="content-switch" style="display=none;"></button>
 						</div>
 
 						<!-- SECTION HEADER 06 -->
 						<div class="slide SH6" data-content="content-6">
 							<div class="img-wrap"><img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S06&w=1280&h=850&fm=png" alt="img6"/></div>
 							<h2>Experience<span>The Journey Walkthrough</span></h2>
-							<button class="content-switch"></button>
+							<button class="content-switch" style="display=none;"></button>
 						</div>
 
 						<!-- SECTION HEADER 07 -->
 						<div class="slide SH7" data-content="content-7">
 							<div class="img-wrap"><img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S07&w=1280&h=850&fm=png" alt="img7"/></div>
 							<h2>Partnerships + Media<span><hr /></span></h2>
-							<button class="content-switch"></button>
+							<button class="content-switch" style="display=none;"></button>
 						</div>
 
 						<!-- SECTION HEADER 08 -->
 						<div class="slide SH8" data-content="content-8">
 							<div class="img-wrap"><img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S08&w=1280&h=850&fm=png" alt="img8"/></div>
 							<h2>Be Part of the New Data Medium <span>Form</span></h2>
-							<button class="content-switch"></button>
+							<button class="content-switch" style="display=none;"></button>
 						</div>
 					</div>
 				</section>
