--- a/index2.html
+++ b/index2.html
@@ -105,9 +105,9 @@
 							<h2>AURORA</h2>
 							<!-- button class="content-switch feathericon-arrow-down">Read more</button -->
 							<button class="content-switch" style="display=none;">	
-								<a href="#SH2">
+								<!-- a href="#SH2">
 									<img class="SH1 arrow" src="https://maxcdn.icons8.com/windows10/PNG/32/Arrows/chevron_right-32.png" />
-								</a>
+								</a -->
 							</button>
 						</div>
 
@@ -118,7 +118,7 @@
 							<!-- img class="aurora-skeleton-viz-img-2" src="http://biomath.math.nd.edu/compbio/PhoneNetwork/continental0p001.gif" / -->
 							</div>
 							<h2 class="slogan-quote">Making Data Enchanting</h2>
-							<button class="content-switch" style="display=none;"></button>
+							<button class="content-switch" style=""></button>
 						</div>
 
 						<!-- SECTION HEADER 03 -->
