--- a/index2.html
+++ b/index2.html
@@ -18,22 +18,8 @@
 		<link rel="stylesheet" type="text/css" href="https://connieleung.github.io/aurora/main.css" />
 		<link rel="stylesheet" type="text/css" href="https://github.com/connieleung/aurora/blob/gh-pages/main.css" />
 		
-		<!-- font awesome -->
-		<link rel="stylesheet" href="https://fortawesome.github.io/Font-Awesome/assets/font-awesome/css/font-awesome.css">
-		<script src="https://use.fonticons.com/ffe176a3.js"></script>
   		<script src="js/modernizr.custom.js"></script>
   		
-  		<!-- Google Web Fonts API -->
-    
-	      <!-- H1 (Main Title), H2 (Main Subtitle) -->
-	      	<!-- link href='http://fonts.googleapis.com/css?family=Questrial:400' rel='stylesheet' type='text/css' -->
-	      <!-- H3 (Section Titles), H4 (Section Subtitles) -->
-	      	<link href='http://fonts.googleapis.com/css?family=Raleway:400|Roboto+Slab:100' rel='stylesheet' type='text/css'>
-	      <!-- H5, Paragraph (longer reading) -->
-	        <link href='http://fonts.googleapis.com/css?family=Varela' rel='stylesheet' type='text/css'>
-	      <!-- H6 (Disclaimer, Notes) -->
-	        <link href='http://fonts.googleapis.com/css?family=Montserrat|Varela|Roboto' rel='stylesheet' type='text/css'>
-
 		<style>
 		h1, h2, h3 /* #site-title */ {
 		        /* AURORA */
@@ -68,7 +54,7 @@
 	</head>
 	<body>
 		<div class="container">
-			<!-- div class="codrops-top clearfix">
+			<!-- div>
 				<a class="codrops-icon codrops-icon-prev" href="http://tympanus.net/Development/HoverEffectIdeas/"><span>Previous Demo</span></a>
 				<span class="right"><a class="codrops-icon codrops-icon-drop" href="http://tympanus.net/codrops/?p=19332"><span>Back to the Codrops Article</span></a></span>
 			</div -->
@@ -103,7 +89,6 @@
 							<img class="aurora-skeleton-viz-img-1" src="https://cloud.githubusercontent.com/assets/4642277/11176707/6bb89836-8c0d-11e5-8925-98469435e8ad.png" />
 							</div>
 							<h2>AURORA</h2>
-							<!-- button class="content-switch feathericon-arrow-down">Read more</button -->
 							<button class="content-switch" style="display=none;">	
 								<!-- a href="#SH2">
 									<img class="SH1 arrow" src="https://maxcdn.icons8.com/windows10/PNG/32/Arrows/chevron_right-32.png" />
@@ -114,7 +99,7 @@
 						<!-- SECTION HEADER 02 -->
 						<div class="slide SH2" id="SH2" data-content="content-2">
 							<div class="img-wrap">
-							<img class="aurora-skeleton-viz-img-2" src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S02&w=1280&h=850&fm=png" alt="img2"/ >
+							<!-- img class="aurora-skeleton-viz-img-2" src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S02&w=1280&h=850&fm=png" alt="img2"/ -->
 							<!-- img class="aurora-skeleton-viz-img-2" src="http://biomath.math.nd.edu/compbio/PhoneNetwork/continental0p001.gif" / -->
 							</div>
 							<h2 class="slogan-quote">Making Data Enchanting</h2>
