SH02 add bg imgs
<img class="aurora-skeleton-viz-img-2a" src="http://sat.qc.ca/sites/default/files/styles/multimedia_visionneuse_large/public/albums/_mg_7664_sebastien_roy_1.jpg?itok=yzLyLycc" alt="img2">
							<img class="aurora-skeleton-viz-img-2b" src="https://thecreatorsproject-images.vice.com/content-images/contentimage/no-slug/086fd8570d19185ca8f19682b4e94465.jpg">

--- a/index2.html
+++ b/index2.html
@@ -100,8 +100,8 @@
 						<!-- SECTION HEADER 02 -->
 						<div class="slide SH2" id="SH2" data-content="content-2">
 							<div class="img-wrap">
-							<!-- img class="aurora-skeleton-viz-img-2" src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S02&w=1280&h=850&fm=png" alt="img2"/ -->
-							<!-- img class="aurora-skeleton-viz-img-2" src="http://biomath.math.nd.edu/compbio/PhoneNetwork/continental0p001.gif" / -->
+							<img class="aurora-skeleton-viz-img-2a" src="http://sat.qc.ca/sites/default/files/styles/multimedia_visionneuse_large/public/albums/_mg_7664_sebastien_roy_1.jpg?itok=yzLyLycc" alt="img2">
+							<img class="aurora-skeleton-viz-img-2b" src="https://thecreatorsproject-images.vice.com/content-images/contentimage/no-slug/086fd8570d19185ca8f19682b4e94465.jpg">
 							</div>
 							<h2 class="slogan-quote">Making Data Enchanting</h2>
 							<button class="content-switch" style=""></button>
