--- a/index2.html
+++ b/index2.html
@@ -103,7 +103,7 @@
 							<img class="aurora-skeleton-viz-img-2a" src="http://sat.qc.ca/sites/default/files/styles/multimedia_visionneuse_large/public/albums/_mg_7664_sebastien_roy_1.jpg?itok=yzLyLycc" alt="img2">
 							<img class="aurora-skeleton-viz-img-2b" src="https://thecreatorsproject-images.vice.com/content-images/contentimage/no-slug/086fd8570d19185ca8f19682b4e94465.jpg">
 							</div>
-							<h2 class="slogan-quote">Making Data Enchanting</h2>
+							<h2 class="slogan-quote">New Medium<span>on Data engagement</span></span></h2>
 							<button class="content-switch" style=""></button>
 						</div>
 
