update SH section with  id="SH"

--- a/index2.html
+++ b/index2.html
@@ -83,7 +83,7 @@
 					<div class="handle">
 
 						<!-- SECTION HEADER 01 -->
-						<div class="slide SH1" data-content="content-1">
+						<div class="slide SH1" id="SH1" data-content="content-1">
 							<div class="img-wrap">
 							<!-- img src="https://placeholdit.imgix.net/~text?txtsize=40&amp;bg=00F3EB&amp;txt=S01&amp;w=1280&amp;h=850&amp;fm=png" alt="img1"/ -->
 							<img class="aurora-skeleton-viz-img-1" src="https://cloud.githubusercontent.com/assets/4642277/11176707/6bb89836-8c0d-11e5-8925-98469435e8ad.png" />
@@ -108,7 +108,7 @@
 						</div>
 
 						<!-- SECTION HEADER 03 -->
-						<div class="slide SH3" id="top" data-content="content-3">
+						<div class="slide SH3" id="SH3" data-content="content-3">
 							<div class="img-wrap">
 							<img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S03&w=1280&h=850&fm=png" alt="img3"/></div>
 							<h2>About<span>Project Aurora</span></h2>
@@ -116,7 +116,7 @@
 						</div>
 
 						<!-- SECTION HEADER 04 -->
-						<div class="slide SH4" data-content="content-4">
+						<div class="slide SH4" id="SH4" data-content="content-4">
 							<div class="img-wrap">
 							<!-- img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S04&w=1280&h=850&fm=png" alt="img4"/ -->
 							<img class="aurora-skeleton-viz-img-inside-02c" src="https://cloud.githubusercontent.com/assets/4642277/11177516/14ec1c92-8c14-11e5-9d6a-a8a312fef9cb.jpeg" alt="img4"/ >
@@ -126,28 +126,28 @@
 						</div>
 
 						<!-- SECTION HEADER 05 -->
-						<div class="slide SH5" data-content="content-5">
+						<div class="slide SH5" id="SH5" data-content="content-5">
 							<div class="img-wrap"><img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S05&w=1280&h=850&fm=png" alt="img5"/></div>
 							<h2>Super Tech<span>Technical Specs</span></h2>
 							<button class="content-switch" style="display=none;"></button>
 						</div>
 
 						<!-- SECTION HEADER 06 -->
-						<div class="slide SH6" data-content="content-6">
+						<div class="slide SH6" id="SH6" data-content="content-6">
 							<div class="img-wrap"><img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S06&w=1280&h=850&fm=png" alt="img6"/></div>
 							<h2>Experience<span>The Journey Walkthrough</span></h2>
 							<button class="content-switch" style="display=none;"></button>
 						</div>
 
 						<!-- SECTION HEADER 07 -->
-						<div class="slide SH7" data-content="content-7">
+						<div class="slide SH7 id="SH8"" data-content="content-7">
 							<div class="img-wrap"><img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S07&w=1280&h=850&fm=png" alt="img7"/></div>
 							<h2>Partnerships + Media<span><hr /></span></h2>
 							<button class="content-switch" style="display=none;"></button>
 						</div>
 
 						<!-- SECTION HEADER 08 -->
-						<div class="slide SH8" data-content="content-8">
+						<div class="slide SH8" id="SH8" data-content="content-8">
 							<div class="img-wrap"><img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S08&w=1280&h=850&fm=png" alt="img8"/></div>
 							<h2>Be Part of the New Data Medium <span>Form</span></h2>
 							<button class="content-switch" style="display=none;"></button>
