--- a/index2.html
+++ b/index2.html
@@ -5,10 +5,10 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1"> 
 		<title>AURORA</title>
-		<meta name="description" content="Draggable Dual-View Slideshow: A Slideshow with two views and content area" />
+		<!-- meta name="description" content="Draggable Dual-View Slideshow: A Slideshow with two views and content area" />
 		<meta name="keywords" content="draggable, slideshow, fullscreen, carousel, views, zoomed, 3d transform, perspective, dragdealer" />
 		<meta name="author" content="Codrops" />
-		<link rel="shortcut icon" href="../favicon.ico">
+		<link rel="shortcut icon" href="../favicon.ico" -->
 		<link href='http://fonts.googleapis.com/css?family=Playfair+Display:900,400|Lato:300,400,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="css/demo.css" />
@@ -110,46 +110,55 @@
 						<!-- SECTION HEADER 03 -->
 						<div class="slide SH3" id="SH3" data-content="content-3">
 							<div class="img-wrap">
-							<img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S03&w=1280&h=850&fm=png" alt="img3"/></div>
-							<h2>About<span>Project Aurora</span></h2>
+							<img class="aurora-skeleton-viz-img-3" src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S03&w=1280&h=850&fm=png" alt="img3"/>
+							</div>
+							<h2>Concept<span></span></h2>
 							<button class="content-switch" style="display=none;"></button>
 						</div>
 
 						<!-- SECTION HEADER 04 -->
 						<div class="slide SH4" id="SH4" data-content="content-4">
 							<div class="img-wrap">
-							<!-- img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S04&w=1280&h=850&fm=png" alt="img4"/ -->
-							<img class="aurora-skeleton-viz-img-inside-02c" src="https://cloud.githubusercontent.com/assets/4642277/11177516/14ec1c92-8c14-11e5-9d6a-a8a312fef9cb.jpeg" alt="img4"/ >
+							<img class="aurora-skeleton-viz-img-4a" src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S04&w=1280&h=850&fm=png" alt="img4"/ -->
+							<img class="aurora-skeleton-viz-img-4b" src="https://cloud.githubusercontent.com/assets/4642277/11177516/14ec1c92-8c14-11e5-9d6a-a8a312fef9cb.jpeg" alt="img4"/ >
 							</div>
-							<h2>Concept<span>Magic of the UX</span></h2>
+							<h2>About<span>The Installation</span></h2>
 							<button class="content-switch" style="display=none;"></button>
 						</div>
 
 						<!-- SECTION HEADER 05 -->
 						<div class="slide SH5" id="SH5" data-content="content-5">
-							<div class="img-wrap"><img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S05&w=1280&h=850&fm=png" alt="img5"/></div>
-							<h2>Super Tech<span>Technical Specs</span></h2>
+							<div class="img-wrap">
+								<img class="aurora-skeleton-viz-img-5" src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S05&w=1280&h=850&fm=png" alt="img5"/>
+							</div>
+							<h2>Experiece<span>Journey Walkthrough</span></h2>
 							<button class="content-switch" style="display=none;"></button>
 						</div>
 
 						<!-- SECTION HEADER 06 -->
 						<div class="slide SH6" id="SH6" data-content="content-6">
-							<div class="img-wrap"><img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S06&w=1280&h=850&fm=png" alt="img6"/></div>
-							<h2>Experience<span>The Journey Walkthrough</span></h2>
+							<div class="img-wrap">
+								<img class="aurora-skeleton-viz-img-6" src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S06&w=1280&h=850&fm=png" alt="img6"/>
+							</div>
+							<h2>Tech<span>Specs</span></h2>
 							<button class="content-switch" style="display=none;"></button>
 						</div>
 
 						<!-- SECTION HEADER 07 -->
 						<div class="slide SH7 id="SH8"" data-content="content-7">
-							<div class="img-wrap"><img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S07&w=1280&h=850&fm=png" alt="img7"/></div>
-							<h2>Partnerships + Media<span><hr /></span></h2>
+							<div class="img-wrap">
+								<img class="aurora-skeleton-viz-img-7" src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S07&w=1280&h=850&fm=png" alt="img7"/>
+							</div>
+							<h2>Reel<span></span></h2>
 							<button class="content-switch" style="display=none;"></button>
 						</div>
 
 						<!-- SECTION HEADER 08 -->
 						<div class="slide SH8" id="SH8" data-content="content-8">
-							<div class="img-wrap"><img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S08&w=1280&h=850&fm=png" alt="img8"/></div>
-							<h2>Be Part of the New Data Medium <span>Form</span></h2>
+							<div class="img-wrap">
+								<img class="aurora-skeleton-viz-img-8" src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S08&w=1280&h=850&fm=png" alt="img8"/>
+							</div>
+							<h2>CTA<span>Form</span></h2>
 							<button class="content-switch" style="display=none;"></button>
 						</div>
 					</div>
