update SH6 img1 bg
add https://s-media-cache-ak0.pinimg.com/originals/2e/e6/99/2ee6998e34c3e2eff7b894c66cfc5267.gif

--- a/index2.html
+++ b/index2.html
@@ -141,7 +141,8 @@
 						<!-- SECTION HEADER 06 -->
 						<div class="slide SH6" id="SH6" data-content="content-6">
 							<div class="img-wrap">
-								<img class="aurora-skeleton-viz-img-6" src="https://thecreatorsproject-images.vice.com/content-images/contentimage/no-slug/38603b581432b70a7fa8dc2c7e61f7f7.jpg" alt="6-ClinK"/>
+								<img class="aurora-skeleton-viz-img-6a" src="https://s-media-cache-ak0.pinimg.com/originals/2e/e6/99/2ee6998e34c3e2eff7b894c66cfc5267.gif" alt="6-dark data graph"/>
+								<img class="aurora-skeleton-viz-img-6b" src="https://thecreatorsproject-images.vice.com/content-images/contentimage/no-slug/38603b581432b70a7fa8dc2c7e61f7f7.jpg" alt="6-ClinK"/>
 								<!-- https://thecreatorsproject.vice.com/en_uk/blog/dance-through-an-interactive-galaxy-of-3d-sound -->
 							</div>
 							<h2>Tech<span>Specs</span></h2>
