update Sh7 with img and hid iframe
http://im.ezgif.com/tmp/ezgif-3311793795.gif

--- a/index2.html
+++ b/index2.html
@@ -152,7 +152,7 @@
 						<!-- SECTION HEADER 07 -->
 						<div class="slide SH7 id="SH8"" data-content="content-7">
 							<div class="img-wrap">
-								<img class="aurora-skeleton-viz-img-7" src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S07&w=1280&h=850&fm=png" alt="img7"/>
+								<img class="aurora-skeleton-viz-img-7" src="http://im.ezgif.com/tmp/ezgif-3311793795.gif" alt="img7"/>
 								
 								<!-- youtube start end time -->
 								<!-- Instructions:
@@ -163,8 +163,8 @@
 								ex: ?start=[your_start_time]&end=[your_end_time]&version=3
 								- replace [your_start_time] and [your_end_time] with actual start and end times in seconds:
 								-->
-								<iframe width="560" height="315" src="//www.youtube.com/embed/Ua3dUrY9HJ8?start=136&end=178&version=3" frameborder="0" allowfullscreen>
-								</iframe>
+								<!-- iframe width="560" height="315" src="//www.youtube.com/embed/Ua3dUrY9HJ8?start=136&end=178&version=3" frameborder="0" allowfullscreen>
+								</iframe -->
 								<!-- test video in css:
 								@media (min-aspect-ratio: 16/9) {
 								  .fullscreen-bg__video {
