replace sh7 img
https://cloud.githubusercontent.com/assets/4642277/11176707/6bb89836-8c0d-11e5-8925-98469435e8ad.png

--- a/index2.html
+++ b/index2.html
@@ -152,7 +152,7 @@
 						<!-- SECTION HEADER 07 -->
 						<div class="slide SH7 id="SH8"" data-content="content-7">
 							<div class="img-wrap">
-								<img class="aurora-skeleton-viz-img-7" src="http://im.ezgif.com/tmp/ezgif-3311793795.gif" alt="img7"/>
+								<img class="aurora-skeleton-viz-img-7" src="https://cloud.githubusercontent.com/assets/4642277/11176707/6bb89836-8c0d-11e5-8925-98469435e8ad.png" alt="img7"/>
 								
 								<!-- youtube start end time -->
 								<!-- Instructions:
