--- a/index2.html
+++ b/index2.html
@@ -343,7 +343,7 @@
                     </h2>
                     <h4>formerly "Partnerships + Media <span>Client + Profile Enhancing List</span></h4>
                     <!-- start Animated Header BG -->
-                    <div class="container demo-1">
+                    <div class="container demo-1" style="border: 2px solid aqua;">
 						<div class="content">
 							<div id="large-header" class="large-header">
 								<canvas id="demo-canvas"></canvas>
